feature: meta og태그 및 abi 수정

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sadangdong</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="사당동 | 실시간 NFT 경매마켓플레이스" />
+    <meta
+      property="og:description"
+      content="사당동은 사실은 오래전부터 당신만을 위한 동물을 준비해왔다우"
+    />
+    <meta
+      property="og:image"
+      content="https://sadangdong99.s3.ap-northeast-2.amazonaws.com/%EC%82%AC%EB%8B%B9%EB%8F%99_Logo.png"
+    />
+    <meta property="og:url" content="https://sadangdong.com" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
