--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,10 @@
       property="og:description"
       content="사당동은 사실은 오래전부터 당신만을 위한 동물을 준비해왔다우"
     />
-    <meta
-      property="og:image"
-      content="https://sadangdong99.s3.ap-northeast-2.amazonaws.com/%EC%82%AC%EB%8B%B9%EB%8F%99_Logo.png"
-    />
+    <meta property="og:image" content="https://ifh.cc/g/bFawZd.png" />
     <meta property="og:url" content="https://sadangdong.com" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="400" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
