--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover" /> -->
     <meta
       name="viewport"
-      content="width=1920px, user-scalable=yes,  min-width=1440px"
+      content="width=device-width, initial-scale=1 viewport-fit=cover"
     />
+    <!-- <meta
+      name="viewport"
+      content="width=1920px, user-scalable=yes,  min-width=1440px"
+    /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
