feature: meta op태그수정  bid result 조건문 추가, mainpage CSS수정, 모달창 추가예정

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,10 @@
       property="og:description"
       content="사당동은 사실은 오래전부터 당신만을 위한 동물을 준비해왔다우"
     />
-    <meta property="og:image" content="https://ifh.cc/g/bFawZd.png" />
+    <meta
+      property="og:image"
+      content="(https://user-images.githubusercontent.com/102935156/182882923-63c500e3-e646-497c-8c7e-b721af13ba5f.png"
+    />
     <meta property="og:url" content="https://sadangdong.com" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="400" />
